[package]
name = "dexalot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dexalot"

[features]
no-entrypoint = []
custom-heap = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
solana-program = "=2.2.0"
hex = "0.4.3"
anchor-spl = { version = "0.30.1", features = ["associated_token", "token"] }
ahash = "=0.8.7"
sha2 = "0.10.8"
sha3 = "0.10.8"
libsecp256k1 = "0.7.1"
bincode = "1.3.3"
proc-macro2 = "1.0.95"